função de retornar todos os agendamentos do usuário criada
