# src/routes.js
@@ -25,6 +25,7 @@ routes.get(
   SchedulingController.listTodaySchedulings
 );
 routes.get('/scheduling/id/:id', SchedulingController.listScheduleById);
+routes.get('/scheduling/all/user', SchedulingController.listAllUserSchedules);
 routes.get('/scheduling/user', SchedulingController.listUserSchedules);
 routes.post('/scheduling', SchedulingController.store);
 routes.delete('/scheduling/:id', SchedulingController.delete);
